--- a/wap/static/login.html
+++ b/wap/static/login.html
@@ -20,7 +20,7 @@
         <div class="nav">
             <hr>
             <ul>
-                <li><a href="#">登录</a></li>
+                <li><a href="logup.html">登录</a></li>
                 <li><a href="login.html">注册</a></li>
                 <li><a href="#">学联体</a></li>
                 <li><a href="#">会员桥</a></li>
@@ -38,6 +38,7 @@
 <div class="top"></div>
 <div id="bgc"><p><a href="../index.html">首页</a>>注册</p></div>
 <section>
+    <div class="dlzc">注册</div>
     <div class="login">
         <form action="" method="post">
             <div>
@@ -263,7 +264,7 @@
                 <label for="join">我要入会</label><input type="checkbox" id="join">
             </div>
             <div>
-                <button value="确定">确定</button>
+                <button value="确定" class="anniu">确定</button>
             </div>
 
         </form>
@@ -273,14 +274,14 @@
     <div class="footer clearfix">
         <span>友情链接</span>
         <ul>
-            <li><a href="#">浙江省经济和信息化委员会</a></li>
-            <li><a href="#">浙江省软件行业协会</a></li>
-            <li><a href="#">杭州市科学技术协会</a></li>
-            <li><a href="#">杭州市自动化学会</a></li>
-            <li><a href="#">杭州市计算机学会</a></li>
-            <li><a href="#">建设单位：杭州数字经济联合会</a></li>
-            <li><a href="#">技术支持单位：杭州名流企业管理咨询有限公司</a></li>
-            <li><a href="#">浙江工业大学计算机学院等</a></li>
+            <li><a target="_blank" href="http://www.zjjxw.gov.cn/">浙江省经济和信息化委员会</a></li>
+            <li><a target="_blank" href="http://www.zsia.org/">浙江省软件行业协会</a></li>
+            <li><a target="_blank" href="http://www.hkx.org.cn/">杭州市科学技术协会</a></li>
+            <li><a target="_blank" href="http://www.hkx.org.cn/xhjj/lxxh.asp?id=17">杭州市自动化学会</a></li>
+            <li><a target="_blank" href="http://www.hzcf.org.cn/">杭州市计算机学会</a></li>
+            <li><a target="_blank" href="http://183.136.177.31/">建设单位：杭州数字经济联合会</a></li>
+            <li><a target="_blank" href="http://www.hzmingxing.com/">技术支持单位：杭州名流企业管理咨询有限公司</a></li>
+            <li><a target="_blank" href="http://www.hzmingxing.com/">浙江工业大学计算机学院等</a></li>
         </ul>
         <hr />
         <p>Copyright 2017-2018 All Rights reserved 版权所有</p>
