--- a/wap/static/more.html
+++ b/wap/static/more.html
@@ -35,20 +35,24 @@
     </nav>
 </header>
 <div class="top"></div>
-<section id="bgc">
-    <p><a href="../index.html">首页</a>><a href="news_detail.html">学会通知</a>>我要报名</p>
-    <p>报名通知</p>
-    <div class="xz">
-        <label for="第一场"><input type="checkbox" value="one" id="第一场">第一场上午10:20</label><br>
-        <label for="第二场"><input type="checkbox" value="one" id="第二场">第二场下午午1:20</label><br>
-        <label for="第三场"><input type="checkbox" value="one" id="第三场">第三场上午3:20</label><br>
-        <label for="第四场"><input type="checkbox" value="one" id="第四场">第四场晚上19:20</label><br>
-    </div>
-    <div class="form">
-        <form action="" method="post">
-            <input id="btn1" type="button" value="确定报名" disabled="disabled" />
-        </form>
-    </div>
+<div id="bgc"><p><a href="../index.html">首页</a>>学会通知>更多</p></div>
+<section>
+    <ul class="more_list">
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科杭州市大杭州市大杭州市大技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+        <li><a href="news_detail.html">第三届杭州市大学生 科技创新大赛评选公示</a></li>
+    </ul>
 </section>
 <footer>
     <div class="footer clearfix">
