--- a/wap/static/news_detail.html
+++ b/wap/static/news_detail.html
@@ -18,7 +18,7 @@
         <div class="nav">
             <hr>
             <ul>
-                <li><a href="#">登录</a></li>
+                <li><a href="logup.html">登录</a></li>
                 <li><a href="login.html">注册</a></li>
                 <li><a href="#">学联体</a></li>
                 <li><a href="#">会员桥</a></li>
@@ -56,14 +56,14 @@
     <div class="footer clearfix">
         <span>友情链接</span>
         <ul>
-            <li><a href="#">浙江省经济和信息化委员会</a></li>
-            <li><a href="#">浙江省软件行业协会</a></li>
-            <li><a href="#">杭州市科学技术协会</a></li>
-            <li><a href="#">杭州市自动化学会</a></li>
-            <li><a href="#">杭州市计算机学会</a></li>
-            <li><a href="#">建设单位：杭州数字经济联合会</a></li>
-            <li><a href="#">技术支持单位：杭州名流企业管理咨询有限公司</a></li>
-            <li><a href="#">浙江工业大学计算机学院等</a></li>
+            <li><a target="_blank" href="http://www.zjjxw.gov.cn/">浙江省经济和信息化委员会</a></li>
+            <li><a target="_blank" href="http://www.zsia.org/">浙江省软件行业协会</a></li>
+            <li><a target="_blank" href="http://www.hkx.org.cn/">杭州市科学技术协会</a></li>
+            <li><a target="_blank" href="http://www.hkx.org.cn/xhjj/lxxh.asp?id=17">杭州市自动化学会</a></li>
+            <li><a target="_blank" href="http://www.hzcf.org.cn/">杭州市计算机学会</a></li>
+            <li><a target="_blank" href="http://183.136.177.31/">建设单位：杭州数字经济联合会</a></li>
+            <li><a target="_blank" href="http://www.hzmingxing.com/">技术支持单位：杭州名流企业管理咨询有限公司</a></li>
+            <li><a target="_blank" href="http://www.hzmingxing.com/">浙江工业大学计算机学院等</a></li>
         </ul>
         <hr />
         <p>Copyright 2017-2018 All Rights reserved 版权所有</p>
